# cpeq-infolettre-automatique

./: .cruft.json  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: deploy.yml  test.yml
archive/: average_embedded_dictionaries.json  average_embedded_dictionaries_split1.json  average_embedded_dictionaries_split2.json  comparison_results.json  embedded_dictionaries.json  output.json  rubrics_split1.json  rubrics_split2.json  rubrics_split3.json
rubrics/: rubrics.json
src/cpeq_infolettre_automatique/: __init__.py  api.py  api_client.py  config.py  main.py  rubrics.json  utils.py  vectorstore.py  vectorstore_client.py  webscraper_io_client.py
tests/: __init__.py  api_test.py  import_test.py  test_api.py  webscraper_io_client_test.py
tests/tests_data/: embedded_dictionaries.json
